--- a/styles.css
+++ b/styles.css
@@ -7,13 +7,12 @@
     height: 100px;
     width: 100px;
     padding: 4px;
-    background: none repeat scroll 0 0 #FFF;
-    border: 1px solid #CCC;
+    background: none repeat scroll 0 0 #fff;
+    border: 1px solid #ccc;
 }
 
 .block .content .userinfoblock span {
     background: url([[pix:block_userinfo|tape2]]) no-repeat scroll transparent;
-    display: block;
     height: 22px;
     left: 50px;
     margin-left: 30%;
